@@ -278,117 +278,117 @@ There are samples for @ref{1D plotting, 1D arrays}, @ref{2D plotting, 2D arrays}
 @anchor{1D plotting}
 @subsection Examples of graphics for 1d arrays
 
-@fig{plot, doc_en/mathgl_en_32.html#Plot-sample}
-@fig{radar, doc_en/mathgl_en_33.html#Radar-sample}
-@fig{step, doc_en/mathgl_en_34.html#Step-sample}
-@fig{tens, doc_en/mathgl_en_35.html#Tens-sample}
+@fig{plot, doc_en/doc_en_32.html#Plot-sample}
+@fig{radar, doc_en/doc_en_33.html#Radar-sample}
+@fig{step, doc_en/doc_en_34.html#Step-sample}
+@fig{tens, doc_en/doc_en_35.html#Tens-sample}
 
-@fig{area, doc_en/mathgl_en_36.html#Area-sample}
-@fig{region, doc_en/mathgl_en_37.html#Region-sample}
-@fig{stem, doc_en/mathgl_en_38.html#Stem-sample}
-@fig{torus, doc_en/mathgl_en_51.html#Torus-sample}
+@fig{area, doc_en/doc_en_36.html#Area-sample}
+@fig{region, doc_en/doc_en_37.html#Region-sample}
+@fig{stem, doc_en/doc_en_38.html#Stem-sample}
+@fig{torus, doc_en/doc_en_51.html#Torus-sample}
 
-@fig{bars, doc_en/mathgl_en_39.html#Bars-sample}
-@fig{barh, doc_en/mathgl_en_40.html#Barh-sample}
-@fig{cones, doc_en/mathgl_en_41.html#Cones-sample}
-@fig{chart, doc_en/mathgl_en_42.html#Chart-sample}
+@fig{bars, doc_en/doc_en_39.html#Bars-sample}
+@fig{barh, doc_en/doc_en_40.html#Barh-sample}
+@fig{cones, doc_en/doc_en_41.html#Cones-sample}
+@fig{chart, doc_en/doc_en_42.html#Chart-sample}
 
-@fig{boxplot, doc_en/mathgl_en_43.html#BoxPlot-sample}
-@fig{candle, doc_en/mathgl_en_44.html#Candle-sample}
-@fig{tube, doc_en/mathgl_en_49.html#Tube-sample}
-@fig{tape, doc_en/mathgl_en_50.html#Tape-sample}
+@fig{boxplot, doc_en/doc_en_43.html#BoxPlot-sample}
+@fig{candle, doc_en/doc_en_44.html#Candle-sample}
+@fig{tube, doc_en/doc_en_49.html#Tube-sample}
+@fig{tape, doc_en/doc_en_50.html#Tape-sample}
 
-@fig{error, doc_en/mathgl_en_45.html#Error-sample}
-@fig{mark, doc_en/mathgl_en_46.html#Mark-sample}
-@fig{textmark, doc_en/mathgl_en_47.html#TextMark-sample}
-@fig{label, doc_en/mathgl_en_48.html#Label-sample}
+@fig{error, doc_en/doc_en_45.html#Error-sample}
+@fig{mark, doc_en/doc_en_46.html#Mark-sample}
+@fig{textmark, doc_en/doc_en_47.html#TextMark-sample}
+@fig{label, doc_en/doc_en_48.html#Label-sample}
 
 @anchor{2D plotting}
 @subsection Examples of graphics for 2d arrays
 
-@fig{surf, doc_en/mathgl_en_53.html#Surf-sample}
-@fig{surfc, doc_en/mathgl_en_54.html#SurfC-sample}
-@fig{surfa, doc_en/mathgl_en_55.html#SurfA-sample}
-@fig{mesh, doc_en/mathgl_en_56.html#Mesh-sample}
+@fig{surf, doc_en/doc_en_53.html#Surf-sample}
+@fig{surfc, doc_en/doc_en_54.html#SurfC-sample}
+@fig{surfa, doc_en/doc_en_55.html#SurfA-sample}
+@fig{mesh, doc_en/doc_en_56.html#Mesh-sample}
 
-@fig{fall, doc_en/mathgl_en_57.html#Fall-sample}
-@fig{belt, doc_en/mathgl_en_58.html#Belt-sample}
-@fig{boxs, doc_en/mathgl_en_59.html#Boxs-sample}
-@fig{axial, doc_en/mathgl_en_67.html#Axial-sample}
+@fig{fall, doc_en/doc_en_57.html#Fall-sample}
+@fig{belt, doc_en/doc_en_58.html#Belt-sample}
+@fig{boxs, doc_en/doc_en_59.html#Boxs-sample}
+@fig{axial, doc_en/doc_en_67.html#Axial-sample}
 
-@fig{dens, doc_en/mathgl_en_62.html#Dens-sample}
-@fig{tile, doc_en/mathgl_en_60.html#Tile-sample}
-@fig{tiles, doc_en/mathgl_en_61.html#TileS-sample}
-@fig{grad, doc_en/mathgl_en_68.html#Grad-sample}
+@fig{dens, doc_en/doc_en_62.html#Dens-sample}
+@fig{tile, doc_en/doc_en_60.html#Tile-sample}
+@fig{tiles, doc_en/doc_en_61.html#TileS-sample}
+@fig{grad, doc_en/doc_en_68.html#Grad-sample}
 
-@fig{cont, doc_en/mathgl_en_63.html#Cont-sample}
-@fig{contf, doc_en/mathgl_en_64.html#ContF-sample}
-@fig{contd, doc_en/mathgl_en_65.html#ContD-sample}
-@fig{contv, doc_en/mathgl_en_66.html#ContV-sample}
+@fig{cont, doc_en/doc_en_63.html#Cont-sample}
+@fig{contf, doc_en/doc_en_64.html#ContF-sample}
+@fig{contd, doc_en/doc_en_65.html#ContD-sample}
+@fig{contv, doc_en/doc_en_66.html#ContV-sample}
 
 @anchor{3D plotting}
 @subsection Examples of graphics for 3d arrays
 
-@fig{surf3, doc_en/mathgl_en_70.html#Surf3-sample}
-@fig{surf3c, doc_en/mathgl_en_71.html#Surf3C-sample}
-@fig{surf3a, doc_en/mathgl_en_72.html#Surf3A-sample}
-@fig{cloud, doc_en/mathgl_en_73.html#Cloud-sample}
+@fig{surf3, doc_en/doc_en_70.html#Surf3-sample}
+@fig{surf3c, doc_en/doc_en_71.html#Surf3C-sample}
+@fig{surf3a, doc_en/doc_en_72.html#Surf3A-sample}
+@fig{cloud, doc_en/doc_en_73.html#Cloud-sample}
 
-@fig{densa, doc_en/mathgl_en_74.html#Dens3-sample}
-@fig{conta, doc_en/mathgl_en_75.html#Cont3-sample}
-@fig{contfa, doc_en/mathgl_en_76.html#ContF3-sample}
-@fig{dots, doc_en/mathgl_en_81.html#Dots-sample}
+@fig{densa, doc_en/doc_en_74.html#Dens3-sample}
+@fig{conta, doc_en/doc_en_75.html#Cont3-sample}
+@fig{contfa, doc_en/doc_en_76.html#ContF3-sample}
+@fig{dots, doc_en/doc_en_81.html#Dots-sample}
 
-@fig{dens_xyz, doc_en/mathgl_en_77.html#Dens-projection-sample}
-@fig{cont_xyz, doc_en/mathgl_en_78.html#Cont-projection-sample}
-@fig{contf_xyz, doc_en/mathgl_en_79.html#ContF-projection-sample}
-@fig{triplot, doc_en/mathgl_en_80.html#TriPlot-and-QuadPlot}
+@fig{dens_xyz, doc_en/doc_en_77.html#Dens-projection-sample}
+@fig{cont_xyz, doc_en/doc_en_78.html#Cont-projection-sample}
+@fig{contf_xyz, doc_en/doc_en_79.html#ContF-projection-sample}
+@fig{triplot, doc_en/doc_en_80.html#TriPlot-and-QuadPlot}
 
 @anchor{Vector fields}
 @subsection Examples of graphics for vector fields
 
-@fig{vect, doc_en/mathgl_en_83.html#Vect-sample}
-@fig{traj, doc_en/mathgl_en_84.html#Tra-sjample}
-@fig{flow, doc_en/mathgl_en_85.html#Flow-sample}
-@fig{pipe, doc_en/mathgl_en_86.html#Pipe-sample}
+@fig{vect, doc_en/doc_en_83.html#Vect-sample}
+@fig{traj, doc_en/doc_en_84.html#Tra-sjample}
+@fig{flow, doc_en/doc_en_85.html#Flow-sample}
+@fig{pipe, doc_en/doc_en_86.html#Pipe-sample}
 
 @anchor{Extra samples}
 @subsection Examples of additional features
 
-@fig{inplot, doc_en/mathgl_en_17.html#Subplots}
-@fig{axis, doc_en/mathgl_en_18.html#Axis-and-ticks}
-@fig{ticks, doc_en/mathgl_en_18.html#Axis-and-ticks}
-@fig{loglog, doc_en/mathgl_en_18.html#Axis-and-ticks}
+@fig{inplot, doc_en/doc_en_17.html#Subplots}
+@fig{axis, doc_en/doc_en_18.html#Axis-and-ticks}
+@fig{ticks, doc_en/doc_en_18.html#Axis-and-ticks}
+@fig{loglog, doc_en/doc_en_18.html#Axis-and-ticks}
 
-@fig{curvcoor, doc_en/mathgl_en_19.html#Curvilinear-coordinates}
-@fig{colorbar, doc_en/mathgl_en_20.html#Colorbars}
-@fig{box, doc_en/mathgl_en_21.html#Bounding-box}
-@fig{ternary, doc_en/mathgl_en_22.html#Ternary-axis}
+@fig{curvcoor, doc_en/doc_en_19.html#Curvilinear-coordinates}
+@fig{colorbar, doc_en/doc_en_20.html#Colorbars}
+@fig{box, doc_en/doc_en_21.html#Bounding-box}
+@fig{ternary, doc_en/doc_en_22.html#Ternary-axis}
 
-@fig{text, doc_en/mathgl_en_23.html#Text-features}
-@fig{legend, doc_en/mathgl_en_24.html#Legend-sample}
-@fig{cut, doc_en/mathgl_en_25.html#Cutting-sample}
-@fig{alpha, doc_en/mathgl_en_90.html#Transparency-and-lighting}
+@fig{text, doc_en/doc_en_23.html#Text-features}
+@fig{legend, doc_en/doc_en_24.html#Legend-sample}
+@fig{cut, doc_en/doc_en_25.html#Cutting-sample}
+@fig{alpha, doc_en/doc_en_90.html#Transparency-and-lighting}
 
-@fig{type0, doc_en/mathgl_en_91.html#Types-of-transparency}
-@fig{type1, doc_en/mathgl_en_91.html#Types-of-transparency}
-@fig{type2, doc_en/mathgl_en_91.html#Types-of-transparency}
-@fig{fog, doc_en/mathgl_en_92.html#Adding-fog}
+@fig{type0, doc_en/doc_en_91.html#Types-of-transparency}
+@fig{type1, doc_en/doc_en_91.html#Types-of-transparency}
+@fig{type2, doc_en/doc_en_91.html#Types-of-transparency}
+@fig{fog, doc_en/doc_en_92.html#Adding-fog}
 
-@fig{combined, doc_en/mathgl_en_89.html#g_t_0060_0060Compound_0027_0027-graphics}
-@fig{several_light, doc_en/mathgl_en_93.html#Several-light-sources}
-@fig{stereo, doc_en/mathgl_en_102.html#Stereo-image}
-@fig{primitives, doc_en/mathgl_en_94.html#Using-primitives}
+@fig{combined, doc_en/doc_en_89.html#g_t_0060_0060Compound_0027_0027-graphics}
+@fig{several_light, doc_en/doc_en_93.html#Several-light-sources}
+@fig{stereo, doc_en/doc_en_102.html#Stereo-image}
+@fig{primitives, doc_en/doc_en_94.html#Using-primitives}
 
-@fig{stfa, doc_en/mathgl_en_95.html#STFA-sample}
-@fig{dat_diff, doc_en/mathgl_en_29.html#Change-data}
-@fig{dat_extra, doc_en/mathgl_en_29.html#Change-data}
-@fig{map, doc_en/mathgl_en_96.html#Mapping-visualization}
+@fig{stfa, doc_en/doc_en_95.html#STFA-sample}
+@fig{dat_diff, doc_en/doc_en_29.html#Change-data}
+@fig{dat_extra, doc_en/doc_en_29.html#Change-data}
+@fig{map, doc_en/doc_en_96.html#Mapping-visualization}
 
-@fig{hist, doc_en/mathgl_en_97.html#Making-histogram}
-@fig{fit, doc_en/mathgl_en_98.html#Nonlinear-fitting-sample}
-@fig{pde, doc_en/mathgl_en_99.html#PDE-solving-hints}
-@fig{parser, doc_en/mathgl_en_100.html#MGL-parser-using}
+@fig{hist, doc_en/doc_en_97.html#Making-histogram}
+@fig{fit, doc_en/doc_en_98.html#Nonlinear-fitting-sample}
+@fig{pde, doc_en/doc_en_99.html#PDE-solving-hints}
+@fig{parser, doc_en/doc_en_100.html#MGL-parser-using}
 
 @external
 
@@ -431,7 +431,7 @@ Before the first using all variables must be defined with the help of commands, 
 
 Command may have several set of possible arguments (for example, @code{plot ydat} and @code{plot xdat ydat}). All command arguments for a selected set must be specified. However, some arguments can have default values. These argument are printed in [], like @code{text ydat ['stl'='']} or @code{text x y 'txt' ['fnt'='' size=-1]}. At this, the record @code{[arg1 arg2 arg3 ...]} means @code{[arg1 [arg2 [arg3 ...]]]}, i.e. you can omit only tailing arguments if you agree with its default values. For example, @code{text x y 'txt' '' 1} or @code{text x y 'txt' ''} is correct, but @code{text x y 'txt' 1} is incorrect (argument @code{'fnt'} is missed).
 
-For more details see @uref{../doc_en/mathgl_en_166.html#MGL-scripts, MathGL documentation}
+For more details see @uref{../doc_en/doc_en_166.html#MGL-scripts, MathGL documentation}
 
 @external
 
